[gd_scene load_steps=41 format=2]

[ext_resource path="res://assets/kitchen/floor.PNG" type="Texture" id=1]
[ext_resource path="res://assets/kitchen/fridge.PNG" type="Texture" id=2]
[ext_resource path="res://assets/kitchen/background.PNG" type="Texture" id=3]
[ext_resource path="res://assets/kitchen/kitchen_counter.PNG" type="Texture" id=4]
[ext_resource path="res://assets/kitchen/window.PNG" type="Texture" id=5]
[ext_resource path="res://assets/kitchen/kitchen_sink.PNG" type="Texture" id=6]
[ext_resource path="res://assets/kitchen/stove.PNG" type="Texture" id=7]
[ext_resource path="res://assets/dad/dad_tex.png" type="Texture" id=8]
[ext_resource path="res://assets/dad/dad_ske.json" type="GDDragonBonesResource" id=9]
[ext_resource path="res://scenes/player.tscn" type="PackedScene" id=10]
[ext_resource path="res://assets/boy/boy_ske.json" type="GDDragonBonesResource" id=11]
[ext_resource path="res://assets/boy/boy_tex.png" type="Texture" id=12]
[ext_resource path="res://scripts/house.gd" type="Script" id=13]
[ext_resource path="res://assets/girl/girl_ske.json" type="GDDragonBonesResource" id=14]
[ext_resource path="res://assets/girl/girl_tex.png" type="Texture" id=15]
[ext_resource path="res://assets/fonts/Bangers-Regular.ttf" type="DynamicFontData" id=16]
[ext_resource path="res://scenes/doguinho.tscn" type="PackedScene" id=17]
[ext_resource path="res://assets/trash_can/trash_can.PNG" type="Texture" id=18]
[ext_resource path="res://assets/living_room/background.PNG" type="Texture" id=19]
[ext_resource path="res://assets/living_room/room_stand.PNG" type="Texture" id=20]
[ext_resource path="res://assets/living_room/floor.PNG" type="Texture" id=21]
[ext_resource path="res://assets/living_room/couch.PNG" type="Texture" id=22]
[ext_resource path="res://assets/living_room/couch_2.PNG" type="Texture" id=23]
[ext_resource path="res://assets/living_room/window.PNG" type="Texture" id=24]
[ext_resource path="res://assets/living_room/tv.PNG" type="Texture" id=25]
[ext_resource path="res://assets/laundry/laundry_basket.png" type="Texture" id=26]
[ext_resource path="res://assets/laundry/floor.PNG" type="Texture" id=27]
[ext_resource path="res://assets/laundry/washing_machine.PNG" type="Texture" id=28]
[ext_resource path="res://assets/laundry/background.PNG" type="Texture" id=29]
[ext_resource path="res://assets/laundry/ironing_board.PNG" type="Texture" id=30]
[ext_resource path="res://assets/laundry/window.PNG" type="Texture" id=31]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 235.57, 136.228 )

[sub_resource type="DynamicFont" id=2]
size = 72
outline_size = 2
outline_color = Color( 1, 1, 0, 1 )
font_data = ExtResource( 16 )

[sub_resource type="CircleShape2D" id=3]
radius = 167.837

[sub_resource type="CapsuleShape2D" id=4]
radius = 161.085
height = 235.659

[sub_resource type="CapsuleShape2D" id=5]
radius = 208.104
height = 936.498

[sub_resource type="CapsuleShape2D" id=6]
radius = 205.912
height = 466.414

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 10454.4, 114.167 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 50, 500 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 50, 500 )

[node name="house" type="Node2D"]
script = ExtResource( 13 )
__meta__ = {
"_edit_horizontal_guides_": [ 791.483 ]
}

[node name="kitchen" type="Node2D" parent="."]
position = Vector2( 1500.91, -98.3808 )
scale = Vector2( 0.4, 0.4 )

[node name="background" type="Sprite" parent="kitchen"]
position = Vector2( 2897.44, 1041.44 )
scale = Vector2( 1.66608, 1 )
texture = ExtResource( 3 )

[node name="floor" type="Sprite" parent="kitchen"]
position = Vector2( 5164.24, 2349.48 )
texture = ExtResource( 1 )

[node name="floor2" type="Sprite" parent="kitchen"]
position = Vector2( 3564.02, 2349.48 )
texture = ExtResource( 1 )

[node name="floor3" type="Sprite" parent="kitchen"]
position = Vector2( 1964.94, 2349.48 )
texture = ExtResource( 1 )

[node name="floor4" type="Sprite" parent="kitchen"]
position = Vector2( 365.116, 2349.48 )
texture = ExtResource( 1 )

[node name="fridge" type="Sprite" parent="kitchen"]
position = Vector2( 5343.12, 1338.49 )
texture = ExtResource( 2 )

[node name="kitchen_counter" type="Sprite" parent="kitchen"]
position = Vector2( 2790.87, 1865.47 )
texture = ExtResource( 4 )

[node name="kitchen_sink" type="Sprite" parent="kitchen"]
position = Vector2( 4176.54, 1801.6 )
texture = ExtResource( 6 )
__meta__ = {
"_edit_group_": true
}

[node name="kitchen_sink" type="Area2D" parent="kitchen/kitchen_sink"]
position = Vector2( -2.12891, 64.7419 )
scale = Vector2( 2.5, 2.5 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="kitchen/kitchen_sink/kitchen_sink"]
shape = SubResource( 1 )

[node name="Label" type="Label" parent="kitchen/kitchen_sink"]
visible = false
margin_left = -344.226
margin_top = -539.147
margin_right = 374.774
margin_bottom = -461.147
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "Press 'E' To Wash The Dishes"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="trash_can" type="Sprite" parent="kitchen"]
position = Vector2( 1786.93, 2051.07 )
texture = ExtResource( 18 )
__meta__ = {
"_edit_group_": true
}

[node name="trash_can" type="Area2D" parent="kitchen/trash_can"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="kitchen/trash_can/trash_can"]
shape = SubResource( 3 )

[node name="Label" type="Label" parent="kitchen/trash_can"]
visible = false
margin_left = -406.26
margin_top = -348.11
margin_right = 382.74
margin_bottom = -270.11
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "Press 'E' To Take Out The Trash"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="stove" type="Sprite" parent="kitchen"]
position = Vector2( 851.011, 1804.72 )
texture = ExtResource( 7 )

[node name="window" type="Sprite" parent="kitchen"]
position = Vector2( 4199, 794.532 )
texture = ExtResource( 5 )

[node name="window2" type="Sprite" parent="kitchen"]
position = Vector2( 884.506, 794.532 )
texture = ExtResource( 5 )

[node name="living_room" type="Node2D" parent="."]
position = Vector2( 1281.78, 0 )
scale = Vector2( 0.4, 0.4 )

[node name="background" type="Sprite" parent="living_room"]
position = Vector2( -2941.69, 803.431 )
scale = Vector2( 1.66136, 1 )
texture = ExtResource( 19 )

[node name="window" type="Sprite" parent="living_room"]
position = Vector2( -3217.87, 545.939 )
texture = ExtResource( 24 )

[node name="floor" type="Sprite" parent="living_room"]
position = Vector2( -678.992, 2103.98 )
texture = ExtResource( 21 )

[node name="floor2" type="Sprite" parent="living_room"]
position = Vector2( -2268.19, 2103.98 )
texture = ExtResource( 21 )

[node name="floor3" type="Sprite" parent="living_room"]
position = Vector2( -3862.68, 2103.98 )
texture = ExtResource( 21 )

[node name="floor4" type="Sprite" parent="living_room"]
position = Vector2( -5451.14, 2103.98 )
texture = ExtResource( 21 )

[node name="couch_2" type="Sprite" parent="living_room"]
position = Vector2( -5141.11, 1612.78 )
texture = ExtResource( 23 )

[node name="couch" type="Sprite" parent="living_room"]
position = Vector2( -3248.33, 1610.76 )
texture = ExtResource( 22 )

[node name="room_stand" type="Sprite" parent="living_room"]
position = Vector2( -1218.52, 1702.58 )
texture = ExtResource( 20 )

[node name="tv" type="Sprite" parent="living_room"]
position = Vector2( -1204.07, 1069.92 )
texture = ExtResource( 25 )

[node name="laundry" type="Node2D" parent="."]
position = Vector2( 4673.29, -25.613 )
scale = Vector2( 0.4, 0.4 )

[node name="background" type="Sprite" parent="laundry"]
position = Vector2( 565.724, 867.464 )
scale = Vector2( 1.24693, 1 )
texture = ExtResource( 29 )

[node name="floor" type="Sprite" parent="laundry"]
position = Vector2( -1166.71, 2167.57 )
texture = ExtResource( 27 )

[node name="floor2" type="Sprite" parent="laundry"]
position = Vector2( 433.427, 2167.57 )
texture = ExtResource( 27 )

[node name="floor3" type="Sprite" parent="laundry"]
position = Vector2( 2033.09, 2167.57 )
texture = ExtResource( 27 )

[node name="ironing_board" type="Sprite" parent="laundry"]
position = Vector2( 1940.09, 1626.95 )
texture = ExtResource( 30 )

[node name="laundry_basket" type="Sprite" parent="laundry"]
position = Vector2( 497.075, 1885.52 )
texture = ExtResource( 26 )

[node name="laundry_basket" type="Area2D" parent="laundry/laundry_basket"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="laundry/laundry_basket/laundry_basket"]
rotation = -1.5708
shape = SubResource( 4 )

[node name="Label" type="Label" parent="laundry/laundry_basket"]
visible = false
margin_left = -398.786
margin_top = -333.616
margin_right = 390.214
margin_bottom = -255.616
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "Press 'E' To Take Out The Trash"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="washing_machine" type="Sprite" parent="laundry"]
position = Vector2( -856.591, 1591.61 )
texture = ExtResource( 28 )

[node name="window" type="Sprite" parent="laundry"]
position = Vector2( 536.326, 613.91 )
texture = ExtResource( 31 )

[node name="dad" type="GDDragonBones" parent="."]
position = Vector2( -834.017, 492.097 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 8 )
resource = ExtResource( 9 )
playback/play = true
playback/curr_animation = "idle"
__meta__ = {
"_edit_group_": true
}

[node name="dad" type="Area2D" parent="dad"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="dad/dad"]
position = Vector2( 63.2972, 19.4998 )
shape = SubResource( 5 )

[node name="boy" type="GDDragonBones" parent="."]
visible = false
position = Vector2( -154.69, 667.279 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 12 )
resource = ExtResource( 11 )
playback/play = true
playback/curr_animation = "idle"
__meta__ = {
"_edit_group_": true
}

[node name="boy" type="Area2D" parent="boy"]
position = Vector2( 144.163, -352.398 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="boy/boy"]
position = Vector2( -67.8826, 261.456 )
shape = SubResource( 6 )

[node name="girl" type="GDDragonBones" parent="."]
position = Vector2( 538.169, 671.48 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 15 )
resource = ExtResource( 14 )
playback/play = true
playback/curr_animation = "idle"
__meta__ = {
"_edit_group_": true
}

[node name="girl" type="Area2D" parent="girl"]
position = Vector2( 144.163, -352.398 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="girl/girl"]
position = Vector2( -67.8826, 261.456 )
shape = SubResource( 6 )

[node name="doguinho" parent="." instance=ExtResource( 17 )]
position = Vector2( 1128.07, 747.503 )

[node name="player" parent="." instance=ExtResource( 10 )]
position = Vector2( -154.767, 491.542 )

[node name="floor" type="StaticBody2D" parent="."]
position = Vector2( 1500.91, -98.3808 )
scale = Vector2( 0.4, 0.4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="floor"]
position = Vector2( 387.85, 2464.93 )
shape = SubResource( 7 )

[node name="wall_right" type="StaticBody2D" parent="."]
position = Vector2( 5859.03, 432.587 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="wall_right"]
position = Vector2( 2.66968, 0 )
shape = SubResource( 8 )

[node name="wall_left" type="StaticBody2D" parent="."]
position = Vector2( -1201.25, 435.158 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="wall_left"]
shape = SubResource( 9 )
[connection signal="body_entered" from="kitchen/kitchen_sink/kitchen_sink" to="." method="_on_kitchen_sink_body_entered"]
[connection signal="body_exited" from="kitchen/kitchen_sink/kitchen_sink" to="." method="_on_kitchen_sink_body_exited"]
[connection signal="body_entered" from="kitchen/trash_can/trash_can" to="." method="_on_trash_can_body_entered"]
[connection signal="body_exited" from="kitchen/trash_can/trash_can" to="." method="_on_trash_can_body_exited"]
[connection signal="body_entered" from="laundry/laundry_basket/laundry_basket" to="." method="_on_laundry_basket_body_entered"]
[connection signal="body_exited" from="laundry/laundry_basket/laundry_basket" to="." method="_on_laundry_basket_body_exited"]
[connection signal="body_entered" from="dad/dad" to="." method="_on_dad_body_entered"]
[connection signal="body_exited" from="dad/dad" to="." method="_on_dad_body_exited"]
[connection signal="body_entered" from="boy/boy" to="." method="_on_boy_body_entered"]
[connection signal="body_exited" from="boy/boy" to="." method="_on_boy_body_exited"]
[connection signal="body_entered" from="girl/girl" to="." method="_on_girl_body_entered"]
[connection signal="body_exited" from="girl/girl" to="." method="_on_girl_body_exited"]
